p7/tools/y.output
   0  $accept : programa $end

   1  programa : ldef

   2  ldef : def
   3       | ldef def

   4  def : defVar
   5      | defStruct
   6      | defFun

   7  defVars : ldefVar
   8          |

   9  ldefVar : defVar
  10          | ldefVar defVar

  11  defVar : VAR ID ':' tipo ';'

  12  tipo : ID
  13       | tipoSimple
  14       | '[' LITENT ']' tipo

  15  tipoSimple : REAL
  16             | INT
  17             | CHAR

  18  tipoRetorno : ':' tipoSimple
  19              |

  20  defStruct : STRUCT ID '{' lcamposStruct '}' ';'

  21  lcamposStruct : camposStruct
  22                | lcamposStruct camposStruct

  23  camposStruct : ID ':' tipo ';'

  24  defFun : ID '(' parametros ')' tipoRetorno '{' defVars lsentencia '}'

  25  parametros : lparametro
  26             |

  27  lparametro : parametro
  28             | lparametro ',' parametro

  29  parametro : ID ':' tipoSimple

  30  lsentencia :
  31             | lsentencia sentencia

  32  sentencia : exp '=' exp ';'
  33            | ID '(' argumentos ')' ';'
  34            | WRITE lexp ';'
  35            | READ exp ';'
  36            | RETURN retorno ';'
  37            | WHILE '(' exp ')' '{' lsentencia '}'
  38            | IF '(' exp ')' '{' lsentencia '}'
  39            | IF '(' exp ')' '{' lsentencia '}' ELSE '{' lsentencia '}'

  40  retorno : exp
  41          |

  42  argumentos : lexp
  43             |

  44  lexp : lexp ',' exp
  45       | exp

  46  exp : '(' exp ')'
  47      | CAST '<' tipoSimple '>' '(' exp ')'
  48      | LITCHAR
  49      | LITENT
  50      | LITREAL
  51      | '-' exp
  52      | exp '+' exp
  53      | exp '-' exp
  54      | exp '*' exp
  55      | exp '/' exp
  56      | exp '%' exp
  57      | ID
  58      | exp '.' ID
  59      | exp '[' exp ']'
  60      | ID '(' argumentos ')'
  61      | exp '<' exp
  62      | exp '>' exp
  63      | exp MENORIGUAL exp
  64      | exp MAYORIGUAL exp
  65      | exp DESIGUALDAD exp
  66      | exp IGUALDAD exp
  67      | '!' exp
  68      | exp AND exp
  69      | exp OR exp

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	STRUCT  shift 2
	VAR  shift 3
	.  error

	programa  goto 4
	ldef  goto 5
	def  goto 6
	defVar  goto 7
	defStruct  goto 8
	defFun  goto 9


state 1
	defFun : ID . '(' parametros ')' tipoRetorno '{' defVars lsentencia '}'  (24)

	'('  shift 10
	.  error


state 2
	defStruct : STRUCT . ID '{' lcamposStruct '}' ';'  (20)

	ID  shift 11
	.  error


state 3
	defVar : VAR . ID ':' tipo ';'  (11)

	ID  shift 12
	.  error


state 4
	$accept : programa . $end  (0)

	$end  accept


state 5
	programa : ldef .  (1)
	ldef : ldef . def  (3)

	ID  shift 1
	STRUCT  shift 2
	VAR  shift 3
	$end  reduce 1

	def  goto 13
	defVar  goto 7
	defStruct  goto 8
	defFun  goto 9


state 6
	ldef : def .  (2)

	.  reduce 2


state 7
	def : defVar .  (4)

	.  reduce 4


state 8
	def : defStruct .  (5)

	.  reduce 5


state 9
	def : defFun .  (6)

	.  reduce 6


state 10
	defFun : ID '(' . parametros ')' tipoRetorno '{' defVars lsentencia '}'  (24)
	parametros : .  (26)

	ID  shift 14
	')'  reduce 26

	parametros  goto 15
	lparametro  goto 16
	parametro  goto 17


state 11
	defStruct : STRUCT ID . '{' lcamposStruct '}' ';'  (20)

	'{'  shift 18
	.  error


state 12
	defVar : VAR ID . ':' tipo ';'  (11)

	':'  shift 19
	.  error


state 13
	ldef : ldef def .  (3)

	.  reduce 3


state 14
	parametro : ID . ':' tipoSimple  (29)

	':'  shift 20
	.  error


state 15
	defFun : ID '(' parametros . ')' tipoRetorno '{' defVars lsentencia '}'  (24)

	')'  shift 21
	.  error


state 16
	parametros : lparametro .  (25)
	lparametro : lparametro . ',' parametro  (28)

	','  shift 22
	')'  reduce 25


state 17
	lparametro : parametro .  (27)

	.  reduce 27


state 18
	defStruct : STRUCT ID '{' . lcamposStruct '}' ';'  (20)

	ID  shift 23
	.  error

	lcamposStruct  goto 24
	camposStruct  goto 25


state 19
	defVar : VAR ID ':' . tipo ';'  (11)

	ID  shift 26
	CHAR  shift 27
	INT  shift 28
	REAL  shift 29
	'['  shift 30
	.  error

	tipo  goto 31
	tipoSimple  goto 32


state 20
	parametro : ID ':' . tipoSimple  (29)

	CHAR  shift 27
	INT  shift 28
	REAL  shift 29
	.  error

	tipoSimple  goto 33


state 21
	defFun : ID '(' parametros ')' . tipoRetorno '{' defVars lsentencia '}'  (24)
	tipoRetorno : .  (19)

	':'  shift 34
	'{'  reduce 19

	tipoRetorno  goto 35


state 22
	lparametro : lparametro ',' . parametro  (28)

	ID  shift 14
	.  error

	parametro  goto 36


state 23
	camposStruct : ID . ':' tipo ';'  (23)

	':'  shift 37
	.  error


state 24
	defStruct : STRUCT ID '{' lcamposStruct . '}' ';'  (20)
	lcamposStruct : lcamposStruct . camposStruct  (22)

	ID  shift 23
	'}'  shift 38
	.  error

	camposStruct  goto 39


state 25
	lcamposStruct : camposStruct .  (21)

	.  reduce 21


state 26
	tipo : ID .  (12)

	.  reduce 12


state 27
	tipoSimple : CHAR .  (17)

	.  reduce 17


state 28
	tipoSimple : INT .  (16)

	.  reduce 16


state 29
	tipoSimple : REAL .  (15)

	.  reduce 15


state 30
	tipo : '[' . LITENT ']' tipo  (14)

	LITENT  shift 40
	.  error


state 31
	defVar : VAR ID ':' tipo . ';'  (11)

	';'  shift 41
	.  error


state 32
	tipo : tipoSimple .  (13)

	.  reduce 13


state 33
	parametro : ID ':' tipoSimple .  (29)

	.  reduce 29


state 34
	tipoRetorno : ':' . tipoSimple  (18)

	CHAR  shift 27
	INT  shift 28
	REAL  shift 29
	.  error

	tipoSimple  goto 42


state 35
	defFun : ID '(' parametros ')' tipoRetorno . '{' defVars lsentencia '}'  (24)

	'{'  shift 43
	.  error


state 36
	lparametro : lparametro ',' parametro .  (28)

	.  reduce 28


state 37
	camposStruct : ID ':' . tipo ';'  (23)

	ID  shift 26
	CHAR  shift 27
	INT  shift 28
	REAL  shift 29
	'['  shift 30
	.  error

	tipo  goto 44
	tipoSimple  goto 32


state 38
	defStruct : STRUCT ID '{' lcamposStruct '}' . ';'  (20)

	';'  shift 45
	.  error


state 39
	lcamposStruct : lcamposStruct camposStruct .  (22)

	.  reduce 22


state 40
	tipo : '[' LITENT . ']' tipo  (14)

	']'  shift 46
	.  error


state 41
	defVar : VAR ID ':' tipo ';' .  (11)

	.  reduce 11


state 42
	tipoRetorno : ':' tipoSimple .  (18)

	.  reduce 18


state 43
	defFun : ID '(' parametros ')' tipoRetorno '{' . defVars lsentencia '}'  (24)
	defVars : .  (8)

	VAR  shift 3
	RETURN  reduce 8
	WHILE  reduce 8
	IF  reduce 8
	ID  reduce 8
	WRITE  reduce 8
	READ  reduce 8
	CAST  reduce 8
	LITCHAR  reduce 8
	LITENT  reduce 8
	LITREAL  reduce 8
	'!'  reduce 8
	'-'  reduce 8
	'('  reduce 8
	'}'  reduce 8

	defVar  goto 47
	defVars  goto 48
	ldefVar  goto 49


state 44
	camposStruct : ID ':' tipo . ';'  (23)

	';'  shift 50
	.  error


state 45
	defStruct : STRUCT ID '{' lcamposStruct '}' ';' .  (20)

	.  reduce 20


state 46
	tipo : '[' LITENT ']' . tipo  (14)

	ID  shift 26
	CHAR  shift 27
	INT  shift 28
	REAL  shift 29
	'['  shift 30
	.  error

	tipo  goto 51
	tipoSimple  goto 32


state 47
	ldefVar : defVar .  (9)

	.  reduce 9


state 48
	defFun : ID '(' parametros ')' tipoRetorno '{' defVars . lsentencia '}'  (24)
	lsentencia : .  (30)

	.  reduce 30

	lsentencia  goto 52


state 49
	defVars : ldefVar .  (7)
	ldefVar : ldefVar . defVar  (10)

	VAR  shift 3
	RETURN  reduce 7
	WHILE  reduce 7
	IF  reduce 7
	ID  reduce 7
	WRITE  reduce 7
	READ  reduce 7
	CAST  reduce 7
	LITCHAR  reduce 7
	LITENT  reduce 7
	LITREAL  reduce 7
	'!'  reduce 7
	'-'  reduce 7
	'('  reduce 7
	'}'  reduce 7

	defVar  goto 53


state 50
	camposStruct : ID ':' tipo ';' .  (23)

	.  reduce 23


state 51
	tipo : '[' LITENT ']' tipo .  (14)

	.  reduce 14


state 52
	defFun : ID '(' parametros ')' tipoRetorno '{' defVars lsentencia . '}'  (24)
	lsentencia : lsentencia . sentencia  (31)

	RETURN  shift 54
	WHILE  shift 55
	IF  shift 56
	ID  shift 57
	WRITE  shift 58
	READ  shift 59
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	'}'  shift 67
	.  error

	sentencia  goto 68
	exp  goto 69


state 53
	ldefVar : ldefVar defVar .  (10)

	.  reduce 10


state 54
	sentencia : RETURN . retorno ';'  (36)
	retorno : .  (41)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	';'  reduce 41

	exp  goto 71
	retorno  goto 72


state 55
	sentencia : WHILE . '(' exp ')' '{' lsentencia '}'  (37)

	'('  shift 73
	.  error


state 56
	sentencia : IF . '(' exp ')' '{' lsentencia '}'  (38)
	sentencia : IF . '(' exp ')' '{' lsentencia '}' ELSE '{' lsentencia '}'  (39)

	'('  shift 74
	.  error


state 57
	sentencia : ID . '(' argumentos ')' ';'  (33)
	exp : ID .  (57)
	exp : ID . '(' argumentos ')'  (60)

	'('  shift 75
	AND  reduce 57
	IGUALDAD  reduce 57
	DESIGUALDAD  reduce 57
	MENORIGUAL  reduce 57
	MAYORIGUAL  reduce 57
	OR  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'%'  reduce 57
	'['  reduce 57
	'.'  reduce 57
	'='  reduce 57


state 58
	sentencia : WRITE . lexp ';'  (34)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	.  error

	exp  goto 76
	lexp  goto 77


state 59
	sentencia : READ . exp ';'  (35)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	.  error

	exp  goto 78


state 60
	exp : CAST . '<' tipoSimple '>' '(' exp ')'  (47)

	'<'  shift 79
	.  error


state 61
	exp : LITCHAR .  (48)

	.  reduce 48


state 62
	exp : LITENT .  (49)

	.  reduce 49


state 63
	exp : LITREAL .  (50)

	.  reduce 50


state 64
	exp : '!' . exp  (67)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	.  error

	exp  goto 80


state 65
	exp : '-' . exp  (51)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	.  error

	exp  goto 81


state 66
	exp : '(' . exp ')'  (46)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	.  error

	exp  goto 82


state 67
	defFun : ID '(' parametros ')' tipoRetorno '{' defVars lsentencia '}' .  (24)

	.  reduce 24


state 68
	lsentencia : lsentencia sentencia .  (31)

	.  reduce 31


state 69
	sentencia : exp . '=' exp ';'  (32)
	exp : exp . '+' exp  (52)
	exp : exp . '-' exp  (53)
	exp : exp . '*' exp  (54)
	exp : exp . '/' exp  (55)
	exp : exp . '%' exp  (56)
	exp : exp . '.' ID  (58)
	exp : exp . '[' exp ']'  (59)
	exp : exp . '<' exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . MENORIGUAL exp  (63)
	exp : exp . MAYORIGUAL exp  (64)
	exp : exp . DESIGUALDAD exp  (65)
	exp : exp . IGUALDAD exp  (66)
	exp : exp . AND exp  (68)
	exp : exp . OR exp  (69)

	AND  shift 83
	IGUALDAD  shift 84
	DESIGUALDAD  shift 85
	MENORIGUAL  shift 86
	MAYORIGUAL  shift 87
	OR  shift 88
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	'['  shift 96
	'.'  shift 97
	'='  shift 98
	.  error


state 70
	exp : ID .  (57)
	exp : ID . '(' argumentos ')'  (60)

	'('  shift 99
	AND  reduce 57
	IGUALDAD  reduce 57
	DESIGUALDAD  reduce 57
	MENORIGUAL  reduce 57
	MAYORIGUAL  reduce 57
	OR  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'%'  reduce 57
	'['  reduce 57
	']'  reduce 57
	'.'  reduce 57
	')'  reduce 57
	';'  reduce 57
	','  reduce 57
	'='  reduce 57


state 71
	retorno : exp .  (40)
	exp : exp . '+' exp  (52)
	exp : exp . '-' exp  (53)
	exp : exp . '*' exp  (54)
	exp : exp . '/' exp  (55)
	exp : exp . '%' exp  (56)
	exp : exp . '.' ID  (58)
	exp : exp . '[' exp ']'  (59)
	exp : exp . '<' exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . MENORIGUAL exp  (63)
	exp : exp . MAYORIGUAL exp  (64)
	exp : exp . DESIGUALDAD exp  (65)
	exp : exp . IGUALDAD exp  (66)
	exp : exp . AND exp  (68)
	exp : exp . OR exp  (69)

	AND  shift 83
	IGUALDAD  shift 84
	DESIGUALDAD  shift 85
	MENORIGUAL  shift 86
	MAYORIGUAL  shift 87
	OR  shift 88
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	'['  shift 96
	'.'  shift 97
	';'  reduce 40


state 72
	sentencia : RETURN retorno . ';'  (36)

	';'  shift 100
	.  error


state 73
	sentencia : WHILE '(' . exp ')' '{' lsentencia '}'  (37)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	.  error

	exp  goto 101


state 74
	sentencia : IF '(' . exp ')' '{' lsentencia '}'  (38)
	sentencia : IF '(' . exp ')' '{' lsentencia '}' ELSE '{' lsentencia '}'  (39)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	.  error

	exp  goto 102


state 75
	sentencia : ID '(' . argumentos ')' ';'  (33)
	exp : ID '(' . argumentos ')'  (60)
	argumentos : .  (43)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	')'  reduce 43

	exp  goto 76
	argumentos  goto 103
	lexp  goto 104


state 76
	lexp : exp .  (45)
	exp : exp . '+' exp  (52)
	exp : exp . '-' exp  (53)
	exp : exp . '*' exp  (54)
	exp : exp . '/' exp  (55)
	exp : exp . '%' exp  (56)
	exp : exp . '.' ID  (58)
	exp : exp . '[' exp ']'  (59)
	exp : exp . '<' exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . MENORIGUAL exp  (63)
	exp : exp . MAYORIGUAL exp  (64)
	exp : exp . DESIGUALDAD exp  (65)
	exp : exp . IGUALDAD exp  (66)
	exp : exp . AND exp  (68)
	exp : exp . OR exp  (69)

	AND  shift 83
	IGUALDAD  shift 84
	DESIGUALDAD  shift 85
	MENORIGUAL  shift 86
	MAYORIGUAL  shift 87
	OR  shift 88
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	'['  shift 96
	'.'  shift 97
	')'  reduce 45
	';'  reduce 45
	','  reduce 45


state 77
	sentencia : WRITE lexp . ';'  (34)
	lexp : lexp . ',' exp  (44)

	';'  shift 105
	','  shift 106
	.  error


state 78
	sentencia : READ exp . ';'  (35)
	exp : exp . '+' exp  (52)
	exp : exp . '-' exp  (53)
	exp : exp . '*' exp  (54)
	exp : exp . '/' exp  (55)
	exp : exp . '%' exp  (56)
	exp : exp . '.' ID  (58)
	exp : exp . '[' exp ']'  (59)
	exp : exp . '<' exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . MENORIGUAL exp  (63)
	exp : exp . MAYORIGUAL exp  (64)
	exp : exp . DESIGUALDAD exp  (65)
	exp : exp . IGUALDAD exp  (66)
	exp : exp . AND exp  (68)
	exp : exp . OR exp  (69)

	AND  shift 83
	IGUALDAD  shift 84
	DESIGUALDAD  shift 85
	MENORIGUAL  shift 86
	MAYORIGUAL  shift 87
	OR  shift 88
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	'['  shift 96
	'.'  shift 97
	';'  shift 107
	.  error


state 79
	exp : CAST '<' . tipoSimple '>' '(' exp ')'  (47)

	CHAR  shift 27
	INT  shift 28
	REAL  shift 29
	.  error

	tipoSimple  goto 108


state 80
	exp : exp . '+' exp  (52)
	exp : exp . '-' exp  (53)
	exp : exp . '*' exp  (54)
	exp : exp . '/' exp  (55)
	exp : exp . '%' exp  (56)
	exp : exp . '.' ID  (58)
	exp : exp . '[' exp ']'  (59)
	exp : exp . '<' exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . MENORIGUAL exp  (63)
	exp : exp . MAYORIGUAL exp  (64)
	exp : exp . DESIGUALDAD exp  (65)
	exp : exp . IGUALDAD exp  (66)
	exp : '!' exp .  (67)
	exp : exp . AND exp  (68)
	exp : exp . OR exp  (69)

	IGUALDAD  shift 84
	DESIGUALDAD  shift 85
	MENORIGUAL  shift 86
	MAYORIGUAL  shift 87
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	'['  shift 96
	'.'  shift 97
	AND  reduce 67
	OR  reduce 67
	']'  reduce 67
	')'  reduce 67
	';'  reduce 67
	','  reduce 67
	'='  reduce 67


state 81
	exp : '-' exp .  (51)
	exp : exp . '+' exp  (52)
	exp : exp . '-' exp  (53)
	exp : exp . '*' exp  (54)
	exp : exp . '/' exp  (55)
	exp : exp . '%' exp  (56)
	exp : exp . '.' ID  (58)
	exp : exp . '[' exp ']'  (59)
	exp : exp . '<' exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . MENORIGUAL exp  (63)
	exp : exp . MAYORIGUAL exp  (64)
	exp : exp . DESIGUALDAD exp  (65)
	exp : exp . IGUALDAD exp  (66)
	exp : exp . AND exp  (68)
	exp : exp . OR exp  (69)

	'['  shift 96
	'.'  shift 97
	AND  reduce 51
	IGUALDAD  reduce 51
	DESIGUALDAD  reduce 51
	MENORIGUAL  reduce 51
	MAYORIGUAL  reduce 51
	OR  reduce 51
	'>'  reduce 51
	'<'  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	'%'  reduce 51
	']'  reduce 51
	')'  reduce 51
	';'  reduce 51
	','  reduce 51
	'='  reduce 51


state 82
	exp : '(' exp . ')'  (46)
	exp : exp . '+' exp  (52)
	exp : exp . '-' exp  (53)
	exp : exp . '*' exp  (54)
	exp : exp . '/' exp  (55)
	exp : exp . '%' exp  (56)
	exp : exp . '.' ID  (58)
	exp : exp . '[' exp ']'  (59)
	exp : exp . '<' exp  (61)
	exp : exp . '>' exp  (62)
	exp : exp . MENORIGUAL exp  (63)
	exp : exp . MAYORIGUAL exp  (64)
	exp : exp . DESIGUALDAD exp  (65)
	exp : exp . IGUALDAD exp  (66)
	exp : exp . AND exp  (68)
	exp : exp . OR exp  (69)

	AND  shift 83
	IGUALDAD  shift 84
	DESIGUALDAD  shift 85
	MENORIGUAL  shift 86
	MAYORIGUAL  shift 87
	OR  shift 88
	'>'  shift 89
	'<'  shift 90
	'+'  shift 91
	'-'  shift 92
	'*'  shift 93
	'/'  shift 94
	'%'  shift 95
	'['  shift 96
	'.'  shift 97
	')'  shift 109
	.  error


state 83
	exp : exp AND . exp  (68)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	.  error

	exp  goto 110


state 84
	exp : exp IGUALDAD . exp  (66)

	ID  shift 70
	CAST  shift 60
	LITCHAR  shift 61
	LITENT  shift 62
	LITREAL  shift 63
	'!'  shift 64
	'-'  shift 65
	'('  shift 66
	.  error

	exp  goto 111


state 85
	exp : exp DESIGUALDAD . exp  (65)
